--- a/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
+++ b/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+    <PackageReference Include="MudBlazor" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
