--- a/Portfolio/Portfolio.Web/Portfolio.Web.csproj
+++ b/Portfolio/Portfolio.Web/Portfolio.Web.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.1.0-preview.1.25064.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.1" />
+    <PackageReference Include="MudBlazor" Version="8.2.0" />
     <PackageReference Include="OpenAI" Version="2.1.0" />
     <ProjectReference Include="..\Portfolio.Web.Client\Portfolio.Web.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
