--- a/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
+++ b/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise" Version="1.7.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
     <PackageReference Include="MudBlazor" Version="8.2.0" />
   </ItemGroup>
