--- a/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
+++ b/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Blazorise" Version="1.7.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
     <PackageReference Include="MudBlazor" Version="8.2.0" />
+    <PackageReference Include="Radzen.Blazor" Version="5.9.8" />
   </ItemGroup>
 
   <ItemGroup>
