--- a/Portfolio/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio/Portfolio.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise" Version="1.7.4" />
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.7.4" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.4" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
