--- a/Portfolio/Portfolio.Web/Portfolio.Web.csproj
+++ b/Portfolio/Portfolio.Web/Portfolio.Web.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.1" />
     <PackageReference Include="MudBlazor" Version="8.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenAI" Version="2.1.0" />
     <PackageReference Include="Radzen.Blazor" Version="5.9.8" />
     <ProjectReference Include="..\Portfolio.Web.Client\Portfolio.Web.Client.csproj" />
