--- a/Portfolio/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio/Portfolio.csproj
@@ -68,6 +68,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
     <PackageReference Include="MudBlazor" Version="8.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="5.9.8" />
   </ItemGroup>
 
