✨ Enhance resume functionality and UI
- Updated `Portfolio.Shared.Models` namespace in `Resume.cs`:
  - Added `[Serializable]` attribute to `Basics` class.
  - Corrected property name from `Email` to `Picture`.
  - Added new `Email` property.
- Enhanced `Resume.razor`:
  - Switched to `System.Text.Json.Serialization`.
  - Improved UI to display detailed sections for basics, work experience, education, skills, projects, certifications, languages, and interests.
- Added custom `NullableDateTimeConverter` to handle `DateTime?` values, including "Present".
- Introduced `ResumeModel` class in `Resume.razor` to represent the resume data structure.
- Updated `OnInitializedAsync` method in `Resume.razor` to use `ResumeModel` and `NullableDateTimeConverter`.
- Updated project files (`Portfolio.Shared.csproj`, `Portfolio.Web.Client.csproj`, `Portfolio.Web.csproj`) to include `resume.json` in the publish directory.
- Corrected URLs for GitHub and LinkedIn profiles in `resume.json`.
- Multiple updates to `resume.json` to ensure correct profile URLs and structure.

Changes made by Gabriel Vega

--- a/Portfolio/Portfolio.Shared/Portfolio.Shared.csproj
+++ b/Portfolio/Portfolio.Shared/Portfolio.Shared.csproj
@@ -14,4 +14,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\resume.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
