--- a/Portfolio/Portfolio.Web/Portfolio.Web.csproj
+++ b/Portfolio/Portfolio.Web/Portfolio.Web.csproj
@@ -24,4 +24,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="resume.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
