--- a/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
+++ b/Portfolio/Portfolio.Web.Client/Portfolio.Web.Client.csproj
@@ -19,4 +19,11 @@
     <ProjectReference Include="..\Portfolio.Shared\Portfolio.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\resume.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
